[gd_scene load_steps=3 format=2]

[ext_resource path="res://Application.gd" type="Script" id=1]
[ext_resource path="res://PopupControls.gd" type="Script" id=2]

[node name="Application" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ApplicationContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0

[node name="MenuContainer" type="PanelContainer" parent="ApplicationContainer"]
margin_right = 1010.0
margin_bottom = 34.0

[node name="MenuLayoutContainer" type="HBoxContainer" parent="ApplicationContainer/MenuContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1003.0
margin_bottom = 27.0

[node name="MenuButtonsContainer3" type="HBoxContainer" parent="ApplicationContainer/MenuContainer/MenuLayoutContainer"]
margin_right = 119.0
margin_bottom = 20.0

[node name="FileButton" type="MenuButton" parent="ApplicationContainer/MenuContainer/MenuLayoutContainer/MenuButtonsContainer3"]
margin_right = 35.0
margin_bottom = 20.0
text = "File"
items = [ "Quit", null, 0, false, false, 0, 0, null, "", false ]

[node name="EditButton" type="MenuButton" parent="ApplicationContainer/MenuContainer/MenuLayoutContainer/MenuButtonsContainer3"]
margin_left = 39.0
margin_right = 75.0
margin_bottom = 20.0
focus_mode = 2
text = "Edit"

[node name="QuitButton" type="MenuButton" parent="ApplicationContainer/MenuContainer/MenuLayoutContainer/MenuButtonsContainer3"]
margin_left = 79.0
margin_right = 119.0
margin_bottom = 20.0
focus_mode = 2
text = "Quit"

[node name="MainContainer" type="MarginContainer" parent="ApplicationContainer"]
margin_top = 38.0
margin_right = 1010.0
margin_bottom = 586.0
size_flags_vertical = 3

[node name="ApplicationPanes" type="HSplitContainer" parent="ApplicationContainer/MainContainer"]
margin_right = 1010.0
margin_bottom = 548.0

[node name="LeftPanePanel" type="PanelContainer" parent="ApplicationContainer/MainContainer/ApplicationPanes"]
margin_right = 251.0
margin_bottom = 548.0

[node name="LeftPaneContainer" type="VBoxContainer" parent="ApplicationContainer/MainContainer/ApplicationPanes/LeftPanePanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 244.0
margin_bottom = 541.0

[node name="NotebookBarContainer" type="PanelContainer" parent="ApplicationContainer/MainContainer/ApplicationPanes/LeftPanePanel/LeftPaneContainer"]
margin_right = 237.0
margin_bottom = 34.0

[node name="NotebookBarLayout" type="HBoxContainer" parent="ApplicationContainer/MainContainer/ApplicationPanes/LeftPanePanel/LeftPaneContainer/NotebookBarContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 230.0
margin_bottom = 27.0

[node name="NotebookSelectionButton" type="OptionButton" parent="ApplicationContainer/MainContainer/ApplicationPanes/LeftPanePanel/LeftPaneContainer/NotebookBarContainer/NotebookBarLayout"]
margin_right = 175.0
margin_bottom = 20.0
disabled = true
text = "No Notebooks Found..."

[node name="NewNotebookButton" type="Button" parent="ApplicationContainer/MainContainer/ApplicationPanes/LeftPanePanel/LeftPaneContainer/NotebookBarContainer/NotebookBarLayout"]
margin_left = 179.0
margin_right = 199.0
margin_bottom = 20.0
text = "+"

[node name="CollapsePaneButton" type="Button" parent="ApplicationContainer/MainContainer/ApplicationPanes/LeftPanePanel/LeftPaneContainer/NotebookBarContainer/NotebookBarLayout"]
margin_left = 203.0
margin_right = 223.0
margin_bottom = 20.0
text = "<"

[node name="FileTreePanel" type="PanelContainer" parent="ApplicationContainer/MainContainer/ApplicationPanes/LeftPanePanel/LeftPaneContainer"]
margin_top = 38.0
margin_right = 237.0
margin_bottom = 534.0
size_flags_vertical = 3

[node name="Tree" type="Tree" parent="ApplicationContainer/MainContainer/ApplicationPanes/LeftPanePanel/LeftPaneContainer/FileTreePanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 230.0
margin_bottom = 489.0

[node name="TreeButtonsLayout" type="HBoxContainer" parent="ApplicationContainer/MainContainer/ApplicationPanes/LeftPanePanel/LeftPaneContainer/FileTreePanel"]
margin_left = 7.0
margin_top = 469.0
margin_right = 230.0
margin_bottom = 489.0
size_flags_vertical = 8
alignment = 2

[node name="Button" type="Button" parent="ApplicationContainer/MainContainer/ApplicationPanes/LeftPanePanel/LeftPaneContainer/FileTreePanel/TreeButtonsLayout"]
margin_left = 203.0
margin_right = 223.0
margin_bottom = 20.0
text = "+"
flat = true

[node name="RightPanePanel" type="PanelContainer" parent="ApplicationContainer/MainContainer/ApplicationPanes"]
margin_left = 263.0
margin_right = 1010.0
margin_bottom = 548.0

[node name="RightPaneContainer" type="VBoxContainer" parent="ApplicationContainer/MainContainer/ApplicationPanes/RightPanePanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 740.0
margin_bottom = 541.0

[node name="FilenameContainer" type="PanelContainer" parent="ApplicationContainer/MainContainer/ApplicationPanes/RightPanePanel/RightPaneContainer"]
margin_right = 733.0
margin_bottom = 28.0

[node name="FilenameLabel" type="Label" parent="ApplicationContainer/MainContainer/ApplicationPanes/RightPanePanel/RightPaneContainer/FilenameContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 726.0
margin_bottom = 21.0
text = "Filename"
align = 1

[node name="FormattingBarPanel" type="PanelContainer" parent="ApplicationContainer/MainContainer/ApplicationPanes/RightPanePanel/RightPaneContainer"]
margin_top = 32.0
margin_right = 733.0
margin_bottom = 66.0

[node name="FormattingBarLayout" type="HBoxContainer" parent="ApplicationContainer/MainContainer/ApplicationPanes/RightPanePanel/RightPaneContainer/FormattingBarPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 726.0
margin_bottom = 27.0
alignment = 1

[node name="FormattingButton" type="Button" parent="ApplicationContainer/MainContainer/ApplicationPanes/RightPanePanel/RightPaneContainer/FormattingBarPanel/FormattingBarLayout"]
margin_right = 27.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "X"

[node name="FormattingButton2" type="Button" parent="ApplicationContainer/MainContainer/ApplicationPanes/RightPanePanel/RightPaneContainer/FormattingBarPanel/FormattingBarLayout"]
margin_left = 31.0
margin_right = 58.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "X"

[node name="FormattingButton3" type="Button" parent="ApplicationContainer/MainContainer/ApplicationPanes/RightPanePanel/RightPaneContainer/FormattingBarPanel/FormattingBarLayout"]
margin_left = 62.0
margin_right = 90.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "X"

[node name="FormattingButton4" type="Button" parent="ApplicationContainer/MainContainer/ApplicationPanes/RightPanePanel/RightPaneContainer/FormattingBarPanel/FormattingBarLayout"]
margin_left = 94.0
margin_right = 121.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "X"

[node name="FormattingButton5" type="Button" parent="ApplicationContainer/MainContainer/ApplicationPanes/RightPanePanel/RightPaneContainer/FormattingBarPanel/FormattingBarLayout"]
margin_left = 125.0
margin_right = 153.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "X"

[node name="FormattingButton6" type="Button" parent="ApplicationContainer/MainContainer/ApplicationPanes/RightPanePanel/RightPaneContainer/FormattingBarPanel/FormattingBarLayout"]
margin_left = 157.0
margin_right = 184.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "X"

[node name="FormattingButton7" type="Button" parent="ApplicationContainer/MainContainer/ApplicationPanes/RightPanePanel/RightPaneContainer/FormattingBarPanel/FormattingBarLayout"]
margin_left = 188.0
margin_right = 216.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "X"

[node name="FormattingButton8" type="Button" parent="ApplicationContainer/MainContainer/ApplicationPanes/RightPanePanel/RightPaneContainer/FormattingBarPanel/FormattingBarLayout"]
margin_left = 220.0
margin_right = 247.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "X"

[node name="FormattingButton9" type="Button" parent="ApplicationContainer/MainContainer/ApplicationPanes/RightPanePanel/RightPaneContainer/FormattingBarPanel/FormattingBarLayout"]
margin_left = 251.0
margin_right = 278.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "X"

[node name="FormattingButton10" type="Button" parent="ApplicationContainer/MainContainer/ApplicationPanes/RightPanePanel/RightPaneContainer/FormattingBarPanel/FormattingBarLayout"]
margin_left = 282.0
margin_right = 310.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "X"

[node name="FormattingButton11" type="Button" parent="ApplicationContainer/MainContainer/ApplicationPanes/RightPanePanel/RightPaneContainer/FormattingBarPanel/FormattingBarLayout"]
margin_left = 314.0
margin_right = 341.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "X"

[node name="FormattingButton12" type="Button" parent="ApplicationContainer/MainContainer/ApplicationPanes/RightPanePanel/RightPaneContainer/FormattingBarPanel/FormattingBarLayout"]
margin_left = 345.0
margin_right = 373.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "X"

[node name="FormattingButton13" type="Button" parent="ApplicationContainer/MainContainer/ApplicationPanes/RightPanePanel/RightPaneContainer/FormattingBarPanel/FormattingBarLayout"]
margin_left = 377.0
margin_right = 404.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "X"

[node name="FormattingButton14" type="Button" parent="ApplicationContainer/MainContainer/ApplicationPanes/RightPanePanel/RightPaneContainer/FormattingBarPanel/FormattingBarLayout"]
margin_left = 408.0
margin_right = 436.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "X"

[node name="FormattingButton15" type="Button" parent="ApplicationContainer/MainContainer/ApplicationPanes/RightPanePanel/RightPaneContainer/FormattingBarPanel/FormattingBarLayout"]
margin_left = 440.0
margin_right = 467.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "X"

[node name="FormattingButton16" type="Button" parent="ApplicationContainer/MainContainer/ApplicationPanes/RightPanePanel/RightPaneContainer/FormattingBarPanel/FormattingBarLayout"]
margin_left = 471.0
margin_right = 498.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "X"

[node name="FormattingButton17" type="Button" parent="ApplicationContainer/MainContainer/ApplicationPanes/RightPanePanel/RightPaneContainer/FormattingBarPanel/FormattingBarLayout"]
margin_left = 502.0
margin_right = 530.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "X"

[node name="FormattingButton18" type="Button" parent="ApplicationContainer/MainContainer/ApplicationPanes/RightPanePanel/RightPaneContainer/FormattingBarPanel/FormattingBarLayout"]
margin_left = 534.0
margin_right = 561.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "X"

[node name="FormattingButton19" type="Button" parent="ApplicationContainer/MainContainer/ApplicationPanes/RightPanePanel/RightPaneContainer/FormattingBarPanel/FormattingBarLayout"]
margin_left = 565.0
margin_right = 593.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "X"

[node name="FormattingButton20" type="Button" parent="ApplicationContainer/MainContainer/ApplicationPanes/RightPanePanel/RightPaneContainer/FormattingBarPanel/FormattingBarLayout"]
margin_left = 597.0
margin_right = 624.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "X"

[node name="FormattingButton21" type="Button" parent="ApplicationContainer/MainContainer/ApplicationPanes/RightPanePanel/RightPaneContainer/FormattingBarPanel/FormattingBarLayout"]
margin_left = 628.0
margin_right = 656.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "X"

[node name="FormattingButton22" type="Button" parent="ApplicationContainer/MainContainer/ApplicationPanes/RightPanePanel/RightPaneContainer/FormattingBarPanel/FormattingBarLayout"]
margin_left = 660.0
margin_right = 687.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "X"

[node name="FormattingButton23" type="Button" parent="ApplicationContainer/MainContainer/ApplicationPanes/RightPanePanel/RightPaneContainer/FormattingBarPanel/FormattingBarLayout"]
margin_left = 691.0
margin_right = 719.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "X"

[node name="TextEditorPanel" type="PanelContainer" parent="ApplicationContainer/MainContainer/ApplicationPanes/RightPanePanel/RightPaneContainer"]
margin_top = 70.0
margin_right = 733.0
margin_bottom = 502.0
size_flags_vertical = 3

[node name="TextEditor" type="TextEdit" parent="ApplicationContainer/MainContainer/ApplicationPanes/RightPanePanel/RightPaneContainer/TextEditorPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 726.0
margin_bottom = 425.0
text = "# This is a text document

More information here, *yadda yadda yadda*. You know the drill. **BUT** that's not enough words to trigger the word wrap, but now this is, so bye.

P.S. Your hair looks really nice today"
show_line_numbers = true
draw_tabs = true
wrap_enabled = true

[node name="DocumentStatsPanel" type="PanelContainer" parent="ApplicationContainer/MainContainer/ApplicationPanes/RightPanePanel/RightPaneContainer"]
margin_top = 506.0
margin_right = 733.0
margin_bottom = 534.0

[node name="DocumentStatsLayout" type="HBoxContainer" parent="ApplicationContainer/MainContainer/ApplicationPanes/RightPanePanel/RightPaneContainer/DocumentStatsPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 726.0
margin_bottom = 21.0

[node name="CharacterCountLabel" type="Label" parent="ApplicationContainer/MainContainer/ApplicationPanes/RightPanePanel/RightPaneContainer/DocumentStatsPanel/DocumentStatsLayout"]
margin_right = 107.0
margin_bottom = 14.0
text = "Characters: 1234"

[node name="WordCountLabel" type="Label" parent="ApplicationContainer/MainContainer/ApplicationPanes/RightPanePanel/RightPaneContainer/DocumentStatsPanel/DocumentStatsLayout"]
margin_left = 111.0
margin_right = 192.0
margin_bottom = 14.0
text = "Words: 1234"

[node name="LastSavedLabel" type="Label" parent="ApplicationContainer/MainContainer/ApplicationPanes/RightPanePanel/RightPaneContainer/DocumentStatsPanel/DocumentStatsLayout"]
margin_left = 196.0
margin_right = 362.0
margin_bottom = 14.0
text = "Last Saved: 5 minutes ago"

[node name="PopupControls" type="Control" parent="."]
visible = false
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2
script = ExtResource( 2 )

[node name="NewNotebookDialog" type="WindowDialog" parent="PopupControls"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -234.0
margin_top = -54.5
margin_right = 234.0
margin_bottom = 54.5
window_title = "New Notebook"

[node name="NewNotebookPanel" type="PanelContainer" parent="PopupControls/NewNotebookDialog"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="NewNotebookDialogLayout" type="VBoxContainer" parent="PopupControls/NewNotebookDialog/NewNotebookPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 461.0
margin_bottom = 102.0
alignment = 1

[node name="NewNotebookLabel" type="Label" parent="PopupControls/NewNotebookDialog/NewNotebookPanel/NewNotebookDialogLayout"]
margin_top = 14.0
margin_right = 454.0
margin_bottom = 28.0
text = "Enter a name for your new notebook below and click Add to create"
align = 1

[node name="NewNotebookNameText" type="LineEdit" parent="PopupControls/NewNotebookDialog/NewNotebookPanel/NewNotebookDialogLayout"]
margin_top = 32.0
margin_right = 454.0
margin_bottom = 56.0
caret_blink = true
caret_blink_speed = 0.5

[node name="NewNotebookButtons" type="HBoxContainer" parent="PopupControls/NewNotebookDialog/NewNotebookPanel/NewNotebookDialogLayout"]
margin_top = 60.0
margin_right = 454.0
margin_bottom = 80.0
alignment = 1

[node name="NewNotebookAddButton" type="Button" parent="PopupControls/NewNotebookDialog/NewNotebookPanel/NewNotebookDialogLayout/NewNotebookButtons"]
margin_left = 179.0
margin_right = 216.0
margin_bottom = 20.0
text = "Add"

[node name="NewNotebookCancelButton" type="Button" parent="PopupControls/NewNotebookDialog/NewNotebookPanel/NewNotebookDialogLayout/NewNotebookButtons"]
margin_left = 220.0
margin_right = 274.0
margin_bottom = 20.0
text = "Cancel"

[connection signal="pressed" from="ApplicationContainer/MenuContainer/MenuLayoutContainer/MenuButtonsContainer3/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="ApplicationContainer/MainContainer/ApplicationPanes/LeftPanePanel/LeftPaneContainer/NotebookBarContainer/NotebookBarLayout/NewNotebookButton" to="." method="_on_NewNotebookButton_pressed"]
[connection signal="pressed" from="PopupControls/NewNotebookDialog/NewNotebookPanel/NewNotebookDialogLayout/NewNotebookButtons/NewNotebookAddButton" to="PopupControls" method="_on_NewNotebookAddButton_pressed"]
[connection signal="pressed" from="PopupControls/NewNotebookDialog/NewNotebookPanel/NewNotebookDialogLayout/NewNotebookButtons/NewNotebookCancelButton" to="PopupControls" method="_on_NewNotebookCancelButton_pressed"]
